--- a/circle.yml
+++ b/circle.yml
@@ -37,6 +37,7 @@ test:
     - cd $SRCDIR; make static
     - cd $SRCDIR; make
     - cd $SRCDIR; ./bin/test
+    - cd $SRCDIR; make client-test
   post:
     - goveralls -repotoken $COVERALLS_REPO_TOKEN -coverprofile=$SRCDIR/profile.cov -service=circleci || true
     - cd $SRCDIR; cp coverage.html $CIRCLE_ARTIFACTS
