--- a/circle.yml
+++ b/circle.yml
@@ -38,6 +38,7 @@ test:
     - cd $SRCDIR; make
     - cd $SRCDIR; ./bin/test
     - cd $SRCDIR; make client-test
+    - cd $SRCDIR/experimental; make
   post:
     - goveralls -repotoken $COVERALLS_REPO_TOKEN -coverprofile=$SRCDIR/profile.cov -service=circleci || true
     - cd $SRCDIR; cp coverage.html $CIRCLE_ARTIFACTS
