[circle] run tests on prs, but skip integration tests
check before each integration test line is a bit ugly. Can combine them
into one step, but then you don't get metrics on how long each step
takes (in circle).

--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,6 @@ general:
   branches:
     ignore:
       - gh-pages
-      - /pull\/.*/
 
 machine:
   services:
@@ -27,7 +26,7 @@ dependencies:
         mv scope_ui_build.tar $(dirname "$SCOPE_UI_BUILD");
       fi
     - curl https://sdk.cloud.google.com | bash
-    - bin/setup-circleci-secrets "$SECRET_PASSWORD"
+    - test -z "$SECRET_PASSWORD" || bin/setup-circleci-secrets "$SECRET_PASSWORD"
   post:
     - go version
     - go clean -i net
@@ -44,12 +43,12 @@ test:
     - cd $SRCDIR; make
     - cd $SRCDIR; ./bin/test -slow
     - cd $SRCDIR/experimental; make
-    - cd $SRCDIR/integration; ./gce.sh setup
-    - cd $SRCDIR/integration; . ./gce.sh hosts; ./setup.sh
-    - cd $SRCDIR/integration; . ./gce.sh hosts; ./run_all.sh:
+    - test -z "$SECRET_PASSWORD" || (cd $SRCDIR/integration; ./gce.sh setup)
+    - test -z "$SECRET_PASSWORD" || (cd $SRCDIR/integration; . ./gce.sh hosts; ./setup.sh)
+    - test -z "$SECRET_PASSWORD" || (cd $SRCDIR/integration; . ./gce.sh hosts; ./run_all.sh):
         timeout: 300
   post:
-    - cd $SRCDIR/integration; ./gce.sh destroy
+    - test -z "$SECRET_PASSWORD" || (cd $SRCDIR/integration; ./gce.sh destroy)
     - goveralls -repotoken $COVERALLS_REPO_TOKEN -coverprofile=$SRCDIR/profile.cov -service=circleci || true
     - cd $SRCDIR; cp coverage.html $CIRCLE_ARTIFACTS
     - cd $SRCDIR; cp scope.tar $CIRCLE_ARTIFACTS
