--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,8 @@ machine:
     PATH: $PATH:$HOME/.local/bin
     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
     SCOPE_UI_BUILD: $HOME/docker/scope_ui_build.tar
+    WEAVE_REPO: github.com/weaveworks/weave
+    WEAVE_ROOT: "${GOPATH%%:*}/src/github.com/weaveworks/weave"
 
 dependencies:
   cache_directories:
@@ -22,6 +24,10 @@ dependencies:
     - curl https://sdk.cloud.google.com | bash
     - test -z "$SECRET_PASSWORD" || bin/setup-circleci-secrets "$SECRET_PASSWORD"
   post:
+    - git clone --depth 1 -b gce-parameterize https://$WEAVE_REPO.git "$WEAVE_ROOT"
+    - go get $WEAVE_REPO/...
+    - cd $WEAVE_ROOT; make testing/runner/runner
+    - sudo apt-get install jq
     - go version
     - go clean -i net
     - go install -tags netgo std
