--- a/circle.yml
+++ b/circle.yml
@@ -12,10 +12,7 @@ dependencies:
     - go install -tags netgo std
     - mkdir -p $(dirname $SRCDIR)
     - cp -r $(pwd)/ $SRCDIR
-    - go get \
-      github.com/golang/lint/golint \
-      github.com/fzipp/gocyclo \
-      github.com/kisielk/errcheck
+    - go get github.com/golang/lint/golint github.com/fzipp/gocyclo github.com/kisielk/errcheck
 
 test:
   override:
