--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ machine:
     - docker
   environment:
     GOPATH: /home/ubuntu:$GOPATH
+    TOOLS: /home/ubuntu/src/github.com/weaveworks/tools
     SRCDIR: /home/ubuntu/src/github.com/weaveworks/scope
     PATH: $PATH:$HOME/.local/bin
     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
@@ -18,30 +19,30 @@ machine:
 dependencies:
   cache_directories:
     - "~/docker"
-  override:
+  post:
+    - mkdir -p $TOOLS
+    - git clone https://github.com/weaveworks/tools.git $TOOLS
     - sudo apt-get update
     - sudo apt-get --only-upgrade install tar libpcap0.8-dev
-    - bin/rebuild-ui-build-image
-    - curl https://sdk.cloud.google.com | bash
+    - sudo apt-get install jq
     - test -z "$SECRET_PASSWORD" || bin/setup-circleci-secrets "$SECRET_PASSWORD"
-  post:
     - go get $WEAVE_REPO/...
     - make -C $WEAVE_ROOT testing/runner/runner
-    - sudo apt-get install jq
     - go version
     - go clean -i net
     - go install -tags netgo std
     - make deps
     - mkdir -p $(dirname $SRCDIR)
     - cp -r $(pwd)/ $SRCDIR
+    - bin/rebuild-ui-build-image
 
 test:
   override:
-    - cd $SRCDIR; ./bin/lint .
+    - cd $SRCDIR; $TOOLS/lint .
     - cd $SRCDIR; make client-test
     - cd $SRCDIR; make static
     - cd $SRCDIR; rm -f app/scope-app probe/scope-probe; make
-    - cd $SRCDIR; ./bin/test -slow
+    - cd $SRCDIR; $TOOLS/test -slow
     - cd $SRCDIR/experimental; make
     - test -z "$SECRET_PASSWORD" || (cd $SRCDIR/integration; ./gce.sh setup)
     - test -z "$SECRET_PASSWORD" || (cd $SRCDIR/integration; eval $(./gce.sh hosts); ./setup.sh)
