--- a/circle.yml
+++ b/circle.yml
@@ -45,9 +45,9 @@ test:
         parallel: true
     - cd $SRCDIR; make RM= static:
         parallel: true
-    - cd $SRCDIR; rm -f app/scope-app probe/scope-probe; if [ "$CIRCLE_NODE_INDEX" = "0" ]; then GOARCH=arm make RM= app/scope-app probe/scope-probe; else GOOS=darwin make RM= app/scope-app probe/scope-probe; fi:
+    - cd $SRCDIR; rm -f app/scope-app prog/probe/scope-probe; if [ "$CIRCLE_NODE_INDEX" = "0" ]; then GOARCH=arm make RM= app/scope-app prog/probe/scope-probe; else GOOS=darwin make RM= app/scope-app prog/probe/scope-probe; fi:
         parallel: true
-    - cd $SRCDIR; rm -f app/scope-app probe/scope-probe; make RM=:
+    - cd $SRCDIR; rm -f app/scope-app prog/probe/scope-probe; make RM=:
         parallel: true
     - cd $SRCDIR/experimental; ./build_on_circle.sh:
         parallel: true
