--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,6 @@ machine:
     - docker
   environment:
     GOPATH: /home/ubuntu
-    TOOLS: /home/ubuntu/src/github.com/weaveworks/tools
     SRCDIR: /home/ubuntu/src/github.com/weaveworks/scope
     PATH: $PATH:$HOME/.local/bin
     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
@@ -20,23 +19,18 @@ dependencies:
   cache_directories:
     - "~/docker"
   post:
-    - mkdir -p $TOOLS
-    - git clone https://github.com/weaveworks/tools.git $TOOLS
     - sudo apt-get update
-    - sudo apt-get --only-upgrade install tar libpcap0.8-dev
     - sudo apt-get install jq pv
     - curl https://sdk.cloud.google.com | bash
     - test -z "$SECRET_PASSWORD" || bin/setup-circleci-secrets "$SECRET_PASSWORD"
     - go get $WEAVE_REPO/...
     - make -C $WEAVE_ROOT testing/runner/runner
-    - go version
-    - go clean -i net
-    - go install -tags netgo std
     - make deps
     - mkdir -p $(dirname $SRCDIR)
     - cp -r $(pwd)/ $SRCDIR
-    - cd $SRCDIR/client; $TOOLS/rebuild-image weaveworks/scope-ui-build . Dockerfile package.json webpack.production.config.js .eslintrc
-    - cd $SRCDIR/backend; $TOOLS/rebuild-image weaveworks/scope-backend-build . Dockerfile build.sh
+    - cd $SRCDIR/client; ../tools/rebuild-image weaveworks/scope-ui-build . Dockerfile package.json webpack.production.config.js .eslintrc
+    - touch $SRCDIR/.scope_ui_build.uptodate
+    - cd $SRCDIR/backend; ../tools/rebuild-image weaveworks/scope-backend-build . Dockerfile build.sh
     - touch $SRCDIR/.scope_backend_build.uptodate
 
 test:
