Last try, then I give up

--- a/circle.yml
+++ b/circle.yml
@@ -32,8 +32,8 @@ dependencies:
     - cd $SRCDIR/backend; ../tools/rebuild-image weaveworks/scope-backend-build . Dockerfile build.sh
     - touch $SRCDIR/.scope_backend_build.uptodate
     - make -C $SRCDIR/tools/runner
-    - mkdir -p $WEAVE_REPO/tools/runner
-    - cp $SRCDIR/tools/runner/runner $WEAVE_REPO/tools/runner
+    - mkdir -p $WEAVE_ROOT/tools/runner
+    - cp $SRCDIR/tools/runner/runner $WEAVE_ROOT/tools/runner
 
 test:
   override:
