--- a/circle.yml
+++ b/circle.yml
@@ -70,7 +70,7 @@ deployment:
           docker push ${DOCKER_ORGANIZATION:-$DOCKER_USER}/scope
         )
   release:
-    branch: release-/[0-9]+\.[0-9]+/
+    branch: /release-[0-9]+\.[0-9]+/
     owner: weaveworks
     commands:
       - go get github.com/weaveworks/wordepress && cd /home/ubuntu/src/github.com/weaveworks/wordepress && git checkout v1.0.0 && cd cmd/wordepress && go get
