--- a/circle.yml
+++ b/circle.yml
@@ -42,7 +42,7 @@ test:
         parallel: true
     - cd $SRCDIR; rm -f prog/scope; make RM=:
         parallel: true
-    - cd $SRCDIR/experimental; ./build_on_circle.sh:
+    - cd $SRCDIR/extras; ./build_on_circle.sh:
         parallel: true
     - "test -z \"$SECRET_PASSWORD\" || (cd $SRCDIR/integration; ./gce.sh setup && eval $(./gce.sh hosts); ./setup.sh)":
         parallel: true
