--- a/circle.yml
+++ b/circle.yml
@@ -73,7 +73,7 @@ deployment:
           )) &&
           docker push ${DOCKER_ORGANIZATION:-$DOCKER_USER}/scope &&
           docker push ${DOCKER_ORGANIZATION:-$DOCKER_USER}/scope:$(./image-tag) &&
-          (test "${DOCKER_ORGANIZATION:-$DOCKER_USER}" == "weaveworks" && (
+          (test "${DOCKER_ORGANIZATION:-$DOCKER_USER}" != "weaveworks" || (
             wcloud deploy weaveworks/scope:$(./image-tag)
           ))
         )
