--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,15 @@ machine:
 dependencies:
   cache_directories:
     - "~/docker"
+  post:
+    # Cache the build image
+    - |
+        rm -rf common-build/.src && \
+        mkdir common-build/.src && \
+        cp -r $(ls | grep -v ^common-build$) common-build/.src/ && \
+        cd common-build && \
+        ../tools/rebuild-image weaveworks/common-build . build.sh Dockerfile && \
+        touch .uptodate
 
 test:
   override:
