--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -7,6 +7,9 @@
   name = "github.com/prometheus/client_golang"
   branch = "master"
 
+# After aa801ca (v1.0.0), kuberesolver changed its API in a non-backwards
+# compatible way. We need to pin this old version until we can refactor to the
+# new API.
 [[constraint]]
   name = "github.com/sercand/kuberesolver"
-  revision = "aa801ca262949d887bbe0bae3f6f731ac82c26f6"
+  version = "1.0.0"
