--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -6,3 +6,10 @@
 [[constraint]]
   name = "github.com/prometheus/client_golang"
   branch = "master"
+
+# After aa801ca (v1.0.0), kuberesolver changed its API in a non-backwards
+# compatible way. We need to pin this old version until we can refactor to the
+# new API.
+[[constraint]]
+  name = "github.com/sercand/kuberesolver"
+  version = "1.0.0"
