Update build container to latest Go
Also install 'dep' and python-requests

--- a/common-build/Dockerfile
+++ b/common-build/Dockerfile
@@ -1,5 +1,5 @@
-FROM golang:1.8.1
-RUN apt-get update && apt-get install -y file && \
+FROM golang:1.10.3-stretch
+RUN apt-get update && apt-get install -y file python-requests && \
 	rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 RUN go clean -i net && \
 	go install -tags netgo std && \
@@ -11,5 +11,6 @@ RUN go get -tags netgo \
 		github.com/mjibson/esc \
 		github.com/client9/misspell/cmd/misspell \
 		mvdan.cc/sh/cmd/shfmt
+RUN curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 COPY build.sh /
 ENTRYPOINT ["/build.sh"]
