--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -13,3 +13,13 @@
 [[constraint]]
   name = "github.com/sercand/kuberesolver"
   version = "1.0.0"
+
+# Older versions apparently have problems converting 'Any' types used in errors
+[[constraint]]
+  name = "github.com/gogo/googleapis"
+  version = ">=v1.1.0"
+
+# Need this version to get past https://github.com/gogo/status/issues/4
+[[constraint]]
+  name = "github.com/gogo/status"
+  version = ">=v1.0.3"
