--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,13 +3,18 @@
 
 # Pin to master branch until there is a more recent stable release:
 #   https://github.com/prometheus/client_golang/issues/375
-[[constraint]]
+[[override]]
   name = "github.com/prometheus/client_golang"
+  branch = "master"
+
+# Need an override on jaeger-lib as it has a ^0.8.0 contraint on client_golang.
+[[override]]
+  name = "github.com/uber/jaeger-lib"
   branch = "master"
 
 [[constraint]]
   name = "github.com/sercand/kuberesolver"
-  version = "2.1.0"
+  version = ">=2.1.0"
 
 # Older versions apparently have problems converting 'Any' types used in errors
 [[constraint]]
