--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 # https://circleci.com/blog/circleci-hacks-reuse-yaml-in-your-circleci-config-with-yaml/
 defaults: &defaults
   docker:
-    - image: quay.io/weaveworks/build-golang:1.10.0-stretch
+    - image: weaveworks/build-golang:1.10.0-stretch
   working_directory: /go/src/github.com/weaveworks/common
 
 workflows:
