--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
     - checkout
     - run:
         name: Lint
-        command: "make BUILD_IN_CONTAINER=false lint"
+        command: |
+          dep ensure &&
+          make BUILD_IN_CONTAINER=false lint
 
   test:
     <<: *defaults
