--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ version: 2
 defaults: &defaults
   docker:
     - image: weaveworks/build-golang:1.12.1-stretch
-  working_directory: /go/src/github.com/weaveworks/common
 
 workflows:
   version: 2
@@ -21,7 +20,7 @@ jobs:
     - run:
         name: Lint
         command: |
-          dep ensure &&
+          go mod vendor &&
           make BUILD_IN_CONTAINER=false lint
 
   test:
@@ -31,5 +30,5 @@ jobs:
     - run:
         name: Test
         command: |
-          dep ensure &&
+          go mod vendor &&
           make BUILD_IN_CONTAINER=false test
